oauth2-proxy/Client/authtest-cdnlab-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: helloworld-authtest-deployment
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: helloworld-authtest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloworld-authtest
    spec:
      containers:
      - image: wardviaene/k8s-demo:latest
        imagePullPolicy: Always
        name: k8s-demo
        ports:
        - containerPort: 3000
          name: nodejs-port
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
