oauth2-proxy/Client/authtest-cdnlab-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: helloworld-authtest-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: helloworld-authtest
  sessionAffinity: None
  type: ClusterIP
